# USB-Sentinel

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  PROJECT_EVALUATION.md  README.md  REFOCUS_PLAN.md  SECURITY.md  Spec.md  USB-Sentinel-Spec-v1.0.docx  claude.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
config/: policy.yaml  sentinel.yaml
dashboard/: index.html  package.json
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/components/: Dashboard.tsx  DeviceList.tsx  EventFeed.tsx  PolicyEditor.tsx
dashboard/src/hooks/: useWebSocket.tsx
scripts/: 99-usb-sentinel.rules  install.sh  usb-sentinel-intercept  usb-sentinel-notify  usb-sentinel.service
src/sentinel/: __init__.py  cli.py  config.py  daemon.py
src/sentinel/analyzer/: __init__.py  llm.py  local.py  prompts.py  scoring.py
src/sentinel/api/: __init__.py  auth.py  routes.py  schemas.py  websocket.py
src/sentinel/audit/: __init__.py  database.py  models.py  schemas.py
src/sentinel/core/: __init__.py  processor.py
src/sentinel/interceptor/: __init__.py  constants.py  descriptors.py  events.py  linux.py  validator.py
src/sentinel/policy/: __init__.py  engine.py  fingerprint.py  models.py  parser.py
src/sentinel/proxy/: __init__.py  capture.py  hid.py  sandbox.py  usbip.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_config.py  test_core_processor.py  test_daemon_integration.py  test_database.py  test_fingerprint.py  test_integration.py  test_interceptor.py  test_policy.py  test_proxy.py
tests/benchmark/: descriptors.py  test_benchmark.py
